--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@vue/cli-plugin-eslint": "^3.0.0",
     "@vue/cli-service": "^3.0.0",
     "babel-plugin-transform-imports": "^1.4.1",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "vue-cli-plugin-vuetify": "^0.1.6",
